Map markers: make buses bus shaped, overflow: hidden, make stops on huge map consistent with other maps

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -518,27 +518,42 @@ table {
 }
 
 .leaflet-marker-icon.leaflet-div-icon {
-    background: $brand-color;
-    border-radius: 10px;
-    border: 1px solid rgba(0,0,0,0.2);
+    background: none;
+    border: 0;
     color: #222;
     font-size: 10px;
-    line-height: 20px;
     text-align: center;
+
+    .bus {
+        background: #fff;
+        border: 1px solid rgba(0, 0, 0, 0.25);
+        height: 12px;
+        line-height: 12px;
+        margin-top: 3px;
+        overflow: hidden;
+    }
+
+    .stop {
+        background: $brand-color;
+        border-radius: 10px;
+        border: 1px solid rgba(0,0,0,0.2);
+        height: 18px;
+    }
+
+    &.active .stop {
+        background: #fff;
+    }
 
     .arrow {
         border: 5px solid transparent;
-        border-bottom-color: #333;
+        border-bottom: 5px solid #000;
         border-top: 0;
         left: 5px;
         position: absolute;
-        top: -7.5px;
-        transform-origin: 5px 17.5px;
+        top: -6px;
+        transform-origin: 5px 16px;
     }
 
-    &.active {
-        background: #fff;
-    }
 }
 
 body .leaflet-container {
